# cluster-api-provider-bringyourownhost

./: .bazelrc  .gitignore  .golangci.yml  .slsa-goreleaser.yml  ADOPTERS.md  BUILD  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  MODULE.bazel  Makefile  PROJECT  README.bazel.md  README.md  REPO.bazel  SECURITY.md  codecov.yml  go.mod  go.sum  kubebuilder-setup.sh  main.go  metadata.yaml  tilt-provider.json  tools.go
.aspect/cli/: config.yaml  go_image.star
.devcontainer/: BUILD  devcontainer.json  post-install.sh
.github/: labeler.yaml
.github/workflows/: ci.yml  docs-lint.yaml  draft-release.yaml  e2e.yml  lgtm.yaml  lint.yml  prow-github-actions.yaml  pull-request-labeler.yaml  snyk-security.yml  test-e2e.yml  test.yml  weekly_tag.yaml
agent/: BUILD  help_flag_test.go  host_agent_suite_test.go  host_agent_test.go  label_flag_test.go  main.go
agent/cloudinit/: BUILD  cloudinit.go  cloudinit_integration_test.go  cloudinit_test.go  cmd_runner.go  file_writer.go  file_writer_test.go  template_parser.go
agent/cloudinit/cloudinitfakes/: BUILD  fake_icmd_runner.go  fake_ifile_writer.go  fake_itemplate_parser.go
agent/reconciler/: BUILD  host_reconciler.go  reconciler_suite_test.go  reconciler_test.go
agent/registration/: BUILD  csr.go  csr_internal_test.go  csr_test.go  host_registrar.go  host_registrar_internal_test.go  host_registrar_test.go  registration_suite_test.go
agent/version/: BUILD
api/infrastructure/v1beta1/: BUILD  bootstrapkubeconfig_types.go  byocluster_types.go  byoclustertemplate_types.go  byohost_types.go  byomachine_types.go  byomachinetemplate_types.go  condition_consts.go  groupversion_info.go  k8sinstallerconfig_types.go  k8sinstallerconfigtemplate_types.go  zz_generated.deepcopy.go
apis/infrastructure/v1beta1/: BUILD  bootstrapkubeconfig_webhook.go  bootstrapkubeconfig_webhook_test.go  byohost_webhook_internal_test.go  byohost_webhook_test.go  byomachinetemplate_types.go  k8sinstallerconfigtemplate_types.go  webhook_suite_test.go  zz_generated.deepcopy.go
cmd/: BUILD  main.go
common/: BUILD
common/bootstraptoken/: BUILD  token.go
config/certmanager/: certificate-metrics.yaml  certificate-webhook.yaml  issuer.yaml
config/crd/: kustomization.yaml
config/crd/bases/: infrastructure.cluster.x-k8s.io_bootstrapkubeconfigs.yaml  infrastructure.cluster.x-k8s.io_byoclusters.yaml  infrastructure.cluster.x-k8s.io_byoclustertemplates.yaml  infrastructure.cluster.x-k8s.io_byohosts.yaml  (+4 more)
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml  allow-webhook-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: infrastructure_bootstrapkubeconfig_admin_role.yaml  infrastructure_bootstrapkubeconfig_editor_role.yaml  infrastructure_bootstrapkubeconfig_viewer_role.yaml  infrastructure_byocluster_admin_role.yaml  infrastructure_byocluster_editor_role.yaml  infrastructure_byocluster_viewer_role.yaml  infrastructure_byoclustertemplate_admin_role.yaml  infrastructure_byoclustertemplate_editor_role.yaml  infrastructure_byoclustertemplate_viewer_role.yaml  infrastructure_byohost_admin_role.yaml  infrastructure_byohost_editor_clusterrolebinding.yaml  infrastructure_byohost_editor_role.yaml  infrastructure_byohost_viewer_role.yaml  infrastructure_byomachine_admin_role.yaml  infrastructure_byomachine_editor_role.yaml  infrastructure_byomachine_viewer_role.yaml  infrastructure_byomachinetemplate_admin_role.yaml  infrastructure_byomachinetemplate_editor_role.yaml  infrastructure_byomachinetemplate_viewer_role.yaml  infrastructure_k8sinstallerconfig_admin_role.yaml  infrastructure_k8sinstallerconfig_editor_role.yaml  infrastructure_k8sinstallerconfig_viewer_role.yaml  infrastructure_k8sinstallerconfigtemplate_admin_role.yaml  infrastructure_k8sinstallerconfigtemplate_editor_role.yaml  infrastructure_k8sinstallerconfigtemplate_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: infrastructure_v1beta1_bootstrapkubeconfig.yaml  infrastructure_v1beta1_byocluster.yaml  infrastructure_v1beta1_byoclustertemplate.yaml  infrastructure_v1beta1_byohost.yaml  infrastructure_v1beta1_byomachine.yaml  infrastructure_v1beta1_byomachinetemplate.yaml  infrastructure_v1beta1_k8sinstallerconfig.yaml  infrastructure_v1beta1_k8sinstallerconfigtemplate.yaml  kustomization.yaml
config/webhook/: manifests.yaml  service.yaml
controllers/infrastructure/: BUILD  bootstrapkubeconfig_controller.go  bootstrapkubeconfig_controller_test.go  byoadmission_controller.go  byoadmission_controller_test.go  byocluster_controller.go  byocluster_controller_test.go  byohost_controller.go  byomachine_controller.go  byomachine_controller_test.go  byomachine_scope.go  byomachinetemplate_controller.go  k8sinstallerconfig_controller.go  k8sinstallerconfig_controller_test.go  suite_test.go
docs/: BYOHDockerFileDev  getting_started.md  installer.md  local_dev.md  release.md  troubleshooting_guide.md
feature/: BUILD
hack/: BUILD  boilerplate.go.txt  getting_started.sh  install-host-agent-service.sh  version.sh
installer/: BUILD  bundle_downloader.go  installer.go  installer_test.go  registry.go  registry_internal_test.go
installer/bundle_builder/: BUILD  build-bundle.sh  build-push-bundle.sh
installer/internal/algo/: BUILD  (+1 more)
scripts/: BUILD
test/builder/: BUILD  builders.go
test/e2e/: BUILD  BYOHDockerFile  byohost_reuse_test.go  cluster_upgrade_test.go  clusterclass_upgrade_test.go  docker_helper.go  e2e_clusterclass_test.go  e2e_debug_helper.go  e2e_installer_test.go  e2e_suite_test.go  e2e_test.go  md_scale_test.go
test/utils/: BUILD  utils.go
tools/: BUILD  repin  tools.lock.json
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl  nogo_config.json
tools/oci/: go_image.bzl
util/: BUILD  util.go
util/runtime/: BUILD  impl.go  runtime.go  runtime_fake_test.go  runtime_test.go  runtime_unix.go  runtime_windows.go
(+31 files in other folders)
